--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Browser localStorage/sessionStorage helper",
   "main": "src/index.js",
   "scripts": {
+    "format": "prettier --write \"**/*.{js,md}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -12,5 +13,8 @@
     "sessionStorage"
   ],
   "author": "GHLandy <ghlandy@ghlandy.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "prettier": "^1.18.2"
+  }
 }
