--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "format": "prettier --write \"**/*.{js,md}\"",
     "precommit": "lint-staged",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "cov": "jest --coverage --verbose=false"
   },
   "keywords": [
     "storage",
@@ -16,7 +17,11 @@
   "author": "GHLandy <ghlandy@ghlandy.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-jest": "^24.9.0",
     "husky": "^3.0.4",
+    "jest": "^24.9.0",
     "lint-staged": "^9.2.3",
     "prettier": "^1.18.2"
   },
