--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "format": "prettier --write \"**/*.{js,md}\"",
+    "lint": "eslint --fix \"**/*.js\"",
+    "lint-staged": "lint-staged",
     "precommit": "lint-staged",
     "test": "jest",
     "cov": "jest --coverage --verbose=false"
@@ -20,6 +22,11 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "babel-jest": "^24.9.0",
+    "eslint": "^6.2.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.0",
     "husky": "^3.0.4",
     "jest": "^24.9.0",
     "lint-staged": "^9.2.3",
@@ -29,7 +36,16 @@
     "**/*.{js,md}": [
       "prettier --write",
       "git add"
+    ],
+    "**/*.js": [
+      "eslint --fix",
+      "git add"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint-staged"
+    }
   },
   "engines": {
     "node": ">=8.0.0"
