--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,16 @@
 {
   "compilerOptions": {
-    // "incremental": true,                   /* Enable incremental compilation */
     "target": "es5",
     "module": "commonjs",
-    // "lib": [],                             /* Specify library files to be included in the compilation. */
-    "allowJs": true,
-    // "checkJs": true,
-    // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
-    // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
-    // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
-    // "sourceMap": true,                     /* Generates corresponding '.map' file. */
+    // "jsx": "preserve",
+    "declaration": true,
+    "declarationDir": "lib",
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
-    // "outDir": "./",                        /* Redirect output structure to the directory. */
+    "outDir": "out",                        /* Redirect output structure to the directory. */
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
-    "removeComments": true /* Do not emit comments to output. */,
+    "removeComments": true,
     // "noEmit": true,                        /* Do not emit outputs. */
     // "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
     // "downlevelIteration": true,            /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
