--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepublishOnly": "npm run tsc && npm run build",
     "format": "prettier --write \"**/*.{js,ts,md}\"",
     "lint": "eslint --fix \"**/*.js\"",
+    "tslint": "tslint --fix \"src/*.ts\"",
     "lint-staged": "lint-staged",
     "precommit": "lint-staged",
     "test": "jest",
@@ -52,6 +53,9 @@
     "prettier": "^1.18.2",
     "rollup": "^1.20.3",
     "rollup-plugin-typescript": "^1.0.1",
+    "tslint": "^5.20.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.6.2"
   },
   "lint-staged": {
@@ -61,6 +65,10 @@
     ],
     "**/*.js": [
       "eslint --fix",
+      "git add"
+    ],
+    "src/*.ts": [
+      "tslint --fix",
       "git add"
     ]
   },
